--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,6 +25,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rough-notation": "^0.5.1",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
